# rectiq

./: Cargo.toml  LICENSE  README.md  README.md.bak  SECURITY.md  dist.toml  flake.nix
rectiq-cli/: Cargo.toml  README.md
rectiq-cli/benches/: cli_e2e.rs  cli_glob.rs
rectiq-cli/src/: config.rs  fix_executor.rs  identity.rs  lib.rs  local_coordinator.rs  main.rs  svc.rs
rectiq-cli/src/commands/: fix.rs  keystore.rs  mod.rs  scan.rs  sketch.rs  symbolset.rs
rectiq-cli/src/controller/: fix_encoder.rs  fix_flow.rs  masking.rs  mod.rs
rectiq-cli/src/divine/: apply.rs  manifest.rs  mod.rs
rectiq-cli/src/docs/: sketch_format.md
rectiq-cli/src/keystore/: file.rs  linux.rs  macos.rs  memory.rs  mod.rs  windows.rs
rectiq-cli/src/pipeline/: lattice.rs  lexer.rs  mod.rs  skeleton.rs
rectiq-cli/src/remote/: ephemeral_key.rs  fix_transmitter.rs  helper.rs  mod.rs  request_builder.rs  symbolset_fetcher.rs
rectiq-cli/src/security/: aad.rs  http.rs  mod.rs  redact.rs
rectiq-cli/src/sketches/: circular_reference.rs  comment_in_json.rs  double_comma.rs  duplicate_key.rs  empty_key_or_value.rs  excess_whitespace_or_newline.rs  extra_or_missing_bracket_complex.rs  extra_or_missing_colon.rs  improper_encoding.rs  improper_nesting.rs  incorrect_boolean_literal.rs  invalid_character.rs  invalid_escape_sequence.rs  invalid_number_format.rs  leading_comma.rs  missing_comma_between_item.rs  missing_quote.rs  mixed_type_in_array.rs  mod.rs  null_or_none_literal.rs  overly_large_number.rs  trailing_comma.rs  unbalanced_bracket.rs  unescaped_quote.rs  unexpected_token.rs
rectiq-cli/src/symbolset/: dto.rs  init.rs  manager.rs  mod.rs  model.rs
rectiq-cli/src/types/: mod.rs  payload.rs  pool.rs  scan.rs  symbolset.rs
rectiq-cli/src/utils/: cow.rs  crypto.rs  mod.rs  sort_json_key.rs
rectiq-cli/tests/: .snap_cli.rs.pending-snap  auth_edge_cases.rs  core_pipeline.rs  e2e.rs  e2e_smoke.rs  fix_limits.rs  fix_response_aad.rs  identity_onboard_mock.rs  integration_live.rs  keystore_native.rs  keystore_roundtrip.rs  lattice_tests.rs  lexer_tests.rs  pipeline_props.rs  redaction.rs  signing.rs  skeleton_tests.rs  snap_cli.rs  test_circular_reference.rs  test_comment_in_json.rs  test_double_comma.rs  test_duplicate_key.rs  test_empty_key_or_value.rs  test_excess_whitespace_or_newline.rs  test_extra_or_missing_bracket_complex.rs  test_extra_or_missing_colon.rs  test_improper_encoding.rs  test_improper_nesting.rs  test_incorrect_boolean_literal.rs  test_invalid_character.rs  test_invalid_escape_sequence.rs  test_invalid_number_format.rs  test_leading_comma.rs  test_missing_comma_between_item.rs  test_missing_quote.rs  test_mixed_type_in_array.rs  test_null_or_none_literal.rs  test_overly_large_number.rs  test_trailing_comma.rs  test_unbalanced_bracket.rs  (+2 more)
rectiq-cli/tests/common/: mod.rs
rectiq-cli/tests/fixtures/: expected_output.json  single_case.json
(+140 files in other folders)
